Can't use OpenCL with AMD R9 280X and NV GTX970 in blender 2.73 test build #43027

Closed
opened 2014-12-26 17:59:18 +01:00 by lhenix · 20 comments
lhenix commented 2014-12-26 17:59:18 +01:00 (Migrated from localhost:3001)

System Information
windows 7 sp1 x64
graphics card is amd R9 280x and NV GTX970

Blender Version
Broken: 2.73 test build

Short description of error
Can't use OpenCL to render images with AMD R9 280X and NV GTX970 in blender 2.73 test build's cycles render

**System Information** windows 7 sp1 x64 graphics card is amd R9 280x and NV GTX970 **Blender Version** Broken: 2.73 test build **Short description of error** Can't use OpenCL to render images with AMD R9 280X and NV GTX970 in blender 2.73 test build's cycles render
lhenix commented 2014-12-26 17:59:18 +01:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
lhenix commented 2014-12-26 17:59:18 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @lhenix

Added subscriber: @lhenix
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Cycles doesn't support OpenCL rendering (meaning AMD cards are not supported, too)! Using CUDA for the Nvidia card should work though, does it?

Cycles doesn't support OpenCL rendering (meaning AMD cards are not supported, too)! Using CUDA for the Nvidia card should work though, does it?
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

This sounds like #42887

This sounds like #42887
Member

Closed as duplicate of #42887

Closed as duplicate of #42887

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'

Added subscriber: @mont29

Added subscriber: @mont29

This has nothing to see with #42887, one is about non-recognized newest CUDA GPUs, the other about OpenCL failure (it seems?)… And nothing to do with OpenGL/Gfx either.

This has nothing to see with #42887, one is about non-recognized newest CUDA GPUs, the other about OpenCL failure (it seems?)… And nothing to do with OpenGL/Gfx either.

@lhenix please precise a bit your problem, you cannot select OpenCL as compute engine? or you can, but the render fails? or what?

@lhenix please precise a bit your problem, you cannot select OpenCL as compute engine? or you can, but the render fails? or what?

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

OpenCL rendering requires an environment variable (CYCLES_OPENCL_TEST). The nvidia card should work fine, as we bundle the sm_52 kernel with Blender 2.73.

OpenCL rendering requires an environment variable (CYCLES_OPENCL_TEST). The nvidia card should work fine, as we bundle the sm_52 kernel with Blender 2.73.

Added subscriber: @sumanta_Banerjee

Added subscriber: @sumanta_Banerjee

Hi! I have Rs 250 (OLAND) GPU from AMD. 2.73 detects my gpu but shows OpenCL build fails in the system

Hi! I have Rs 250 (OLAND) GPU from AMD. 2.73 detects my gpu but shows OpenCL build fails in the system
Member

@sumanta_Banerjee, I'm not sure what you mean. Is your gpu listed in the dropdown list in the User Preferences (using an official build)?

@sumanta_Banerjee, I'm not sure what you mean. Is your gpu listed in the dropdown list in the User Preferences (using an official build)?
Author

This issue was referenced by 4f2583ee13

This issue was referenced by 4f2583ee1300157a2f08532509ab3a53ef3a7b47

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4f2583ee13.

Closed by commit 4f2583ee13.
Author

This issue was referenced by blender/cycles@4397e9f6d7

This issue was referenced by blender/cycles@4397e9f6d769ba1d192c02fcee649c574e5a6511
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43027
No description provided.