intern/cycles/util/util_math.h
@@ -1486,25 +1486,6 @@ ccl_device_inline int util_max_axis(float3 vec)
 	}
 }
 
-/* NOTE: We don't use std::swap here because of number of reasons:
- *
- * - We don't want current context to be polluted with all the templated
- *   functions from stl which might cause some interference about which
- *   function is used.
- *
- * - Different devices in theory might want to use intrinsics to optimize
- *   this function for specific type.
- *
- * - We don't want ot use references because of OpenCL state at this moment.
- */
-template <typename T>
-ccl_device_inline void util_swap(T *__restrict a, T *__restrict b)
-{
-	T c = *a;
-	*a = *b;
-	*b = c;
-}
-
 CCL_NAMESPACE_END
 
 #endif /* __UTIL_MATH_H__ */
